# ChangeLog for virtual/gsasl
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/gsasl/ChangeLog,v 1.4 2010/10/16 12:11:23 ranger Exp $

  15 Oct 2010; Brent Baude <ranger@gentoo.org> gsasl-1.4.1.ebuild:
  stable ppc, bug 339980

  10 Oct 2010; Markos Chandras <hwoarang@gentoo.org> gsasl-1.4.1.ebuild:
  Stable on amd64 wrt bug #339980

  07 Oct 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> gsasl-1.4.1.ebuild:
  x86 stable wrt bug #339980

*gsasl-1.4.1 (17 Feb 2010)
*gsasl-1.1 (17 Feb 2010)
*gsasl-0.2.29 (17 Feb 2010)
*gsasl-0.2.28 (17 Feb 2010)
*gsasl-0.2.4 (17 Feb 2010)

  17 Feb 2010; Jeroen Roovers <jer@gentoo.org> +gsasl-0.2.4.ebuild,
  +gsasl-0.2.28.ebuild, +gsasl-0.2.29.ebuild, +gsasl-1.1.ebuild,
  +gsasl-1.4.1.ebuild, +metadata.xml:
  Switch to new style virtuals (bug #237400).
