@@ -3,5 +3,6 @@ EBUILD gsasl-0.2.29.ebuild 454 RMD160 380059be0e9a990574b17ce08d9a738e38191c8d S
 EBUILD gsasl-0.2.4.ebuild 446 RMD160 c43a8fefbabc3374296a6e482c62c8c00d142d52 SHA1 1925563e40da51a2cf7f5b5dc2af9865ea65da00 SHA256 24ee87a37fb27e1800ea0622cb092e25240dc45b0682d49279fe53553d94222b
 EBUILD gsasl-1.1.ebuild 486 RMD160 2dbeb7d67d4e0ba8f19f8f33d1f53b1981a5ea12 SHA1 57c3f902f7f346bb6db796f775b1536cb4716cd6 SHA256 fee7a180d6a82e311a933b365045694b171423dd193572185cde518660e7d45f
 EBUILD gsasl-1.4.1.ebuild 488 RMD160 debf16224965bc2fe659cc3e3f00da485af68529 SHA1 001aed7d06026bc484097eda3d44f58abbc68946 SHA256 457db8144dc629e12db55ce20701aa7dd1a6a5d5a390d1588bdf5fb3788233f2
-MISC ChangeLog 859 RMD160 349caa8fe283d0b5d9bb72cc208a75b00382eb5d SHA1 84d1fb1fb3001e1d73544684c536502416d295e3 SHA256 76b37b94bde8aa7a718b6ad690b0860d86aa24de80a46249f1b55697201e6867
+EBUILD gsasl-1.6.0.ebuild 488 RMD160 bbcf44f323e863e90b58a8ba55c7edd4a285d202 SHA1 fef1198a941a6fc71de4e7621b15054880a8f8b8 SHA256 9f132c0d710cc9d8166b0f557e2ab2aa15f470bdfd6251b9640e204eb82ab103
+MISC ChangeLog 983 RMD160 a95667fd2500dc7a6b4d93b0fdbae693d53f3d19 SHA1 d7849b8bcdbe3709edf7bf4b4ca522ece176586b SHA256 985ab010222bb81c3d97e9b18e14d54c1c59bf4e0e75aa98797cbcbef059f275
 MISC metadata.xml 162 RMD160 fd38b82541901b3c6df18b630d79fe7883ae3f01 SHA1 e6aecefcc2137d6047cedfe447686775ab59cb48 SHA256 569031668e39895fb20829fb17a49a91a83e8f41b2195b0f04825c4340d2af6b
